<resources>
    <string name="app_name">Looking Glass</string>
    <string name="qr_code_results_go_here">QR Code results go here</string>
    <string name="scan">Scan</string>
    <string name="exhibit_browser">Exhibit browser</string>
    <string name="looking_glass">Looking Glass</string>
    <string name="example_text">textexample
    line 2
    line3</string>
    <string name="error">
        Invalid Exhibit \n
        Code Does Not Exist \n
        Please either scan a different code or seek an administrator if you believe the code should work.</string>
    <string name="lunchonthegrass">
        Lunch On The Grass \n
        Edouard Manet \n
        The original painting that inspired the impressionist movement. Initially created in 1862, this painting by Manet was met with hostility as it rejected conventional notions of art at the time. As a result of the controversy, Manet sparked an artistic revolution.</string>
    <string name="impressionsunrise">
        Impression Sunrise \n
        Claude Monet \n
        Directly responsible for the name of the movement, Impression Sunrise was derisively referred to as “impressionistic”. As a result, the term was quickly adopted by the painters as they formed their own exhibitions and united them in their efforts.</string>
    <string name="thedanceclass">
        The Dance Class \n
        Edgar Degas \n
        Created as a series of painting, The Dance Class paintings were favored subjects of Degas as he strongly preferred to avoid painting outdoors. They offered prime attributes of many impressionistic paintings as they were bright and modern without any sentimentality. Although staged at the Opera, the compositions were posed for in his studio.</string>
    <string name="luncheonattheboatingparty">
        Luncheon At The Boating Party \n
        Pierre-Auguste Renoir \n
        One of the pinnacle paintings of the impressionist movement, Luncheon At The Boating Party depicts a modern scene devoid of imparting any moral message. A master of delight, Renoir’s painting is considered one of the most famous French paintings of all time now as it combines multiple genres into one image including portrait, still life, and even landscape.</string>
    <string name="thecardplayers">
        The Card Players \n
        Paul Cezanne \n
        As one of the highest valued paintings sold ever, Cezanne’s work is a striking study created as part of a series of five. Perhaps in an effort to distinguish himself, he focuses the illustrations far more on the social shared space of the game and provides an intimacy to the setting. As per the impressionist movement, the art depicts the mundane without need for excitement or melodrama.</string>
    <string name="looking">Looking</string>
    <string name="glass">Glass</string>
    <string name="title_activity_history">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="title_activity_historytab">ScrollingActivity</string>
    <string name="go_back">Go Back</string>
    <string name="visit_exhibit">Visit Exhibit</string>
    <string name="tostertext">testing</string>
    <string name="longdesct">Description but is\'s super long</string>
    <string name="go_bacc">Go back</string>
    <string name="tost">test \n</string>
    <string name="artist_name">Artist name</string>
    <string name="returneded">Return</string>
    <string name="short_artist_description">short artist description</string>
    <string name="summary_of_the_artist_goes_here">Summary of the artist goes here</string>
    <string name="scan_codes">Scan Codes</string>
    <string name="history">History</string>
    <string name="looking_glass_logo">Looking Glass logo</string>
    <string name="available_exhibits">Available Exhibits</string>
</resources>