<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exhibittab">

    <TextView
        android:id="@+id/Artistname"
        android:layout_width="276dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="674dp"
        android:text="@string/artist_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Button.Gray"
        android:layout_marginStart="7dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="675dp"
        android:background = "@drawable/rectangles"
        android:text="@string/returneded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Artistname"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/exhibitscroll"
        android:layout_width="409dp"
        android:layout_height="663dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returning">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/Artistvid"
                android:layout_width="match_parent"
                android:layout_height="350dp"/>
         </FrameLayout>

            <TextView
            android:id="@+id/artistdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_artist_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Artistsumm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_of_the_artist_goes_here"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>