<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    ##posts the QR value in a text box for the user

    ## Scanner button

    ## History tab button

    <TextView
        android:id="@+id/QRRES"
        android:layout_width="242dp"
        android:layout_height="65dp"
        android:rotation="0"
        android:rotationY="0"
        android:text="@string/qr_code_results_go_here"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    ##Exhibit browser tab (?) button

    ## literally just the title needs to be fancier later, or not doesn't matter towards the end
    goal really

    <shape
        android:id="@+id/listview_background_shape"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="646dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <stroke
            android:width="178dp"
            android:color="#FF000000" />

        <padding
            android:bottom="2dp"
            android:left="92dp"
            android:right="2dp"
            android:top="2dp" />

        <corners android:radius="5dp" />

        <solid android:color="#FF000000" />

    </shape>

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="92dp"
        android:layout_marginTop="364dp"
        android:onClick="Scanbutton"
        android:text="Scan Codes"
        android:textSize="20sp"
        android:background = "@drawable/rectangles"
        android:theme="@style/Button.Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Histbutton"
        android:layout_width="142dp"
        android:layout_height= "58dp"
        android:layout_marginTop="472dp"
        android:text="History"
        android:theme="@style/Button.Gray"
        android:background = "@drawable/rectangles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Exhibbutton"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_marginTop="536dp"
        android:text="@string/exhibit_browser"
        android:theme="@style/Button.Gray"
        android:background = "@drawable/rectangles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="175dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="80dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:text="@string/looking"
        android:textSize="30sp"
        android:theme="@style/Text.White"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="239dp"
        android:layout_height="80dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:text="@string/glass"
        android:textSize="30sp"
        android:theme="@style/Text.White"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logodesign"
        android:layout_width="145dp"
        android:layout_height="154dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo3" />

</androidx.constraintlayout.widget.ConstraintLayout>